# mcp-interviewer

./: .pre-commit-config.yaml  CHECKSUMS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  TRANSPARENCY.md  interview_results_20250709_145655.json  mcp-interview.json  mcp-interview.md  mcp-scorecard.md  pyproject.toml  results.json  results.yaml
.ado/: policheck.yml
.github/: dependabot.yml
.github/workflows/: build.yml  check-and-build.yml  check.yml  codeql-advanced.yml  codeql.yml  release.yml
src/mcp_interviewer/: __init__.py  agent_cli.py  cli.py  interviewer.py  main.py  models.py  prompts.py  reports.py  reports_old.py  tester.py  types.py  utils.py
src/mcp_interviewer/agent/: README.md  __init__.py  agent.py  config.py
src/mcp_interviewer/constraints/: __init__.py  base.py  openai.py  tool_schema_flatness.py
src/mcp_interviewer/interviewer/: _interviewer.py  test_execution.py  test_generation.py  test_judging.py
src/mcp_interviewer/prompts/: __init__.py  _score_functional_test_output.py  _score_functional_test_step_output.py  _score_tool.py  utils.py
src/mcp_interviewer/reports/: __init__.py  base.py  capabilities.py  constraint_violations.py  custom.py  emoji_legend.py  failed_tests.py  full.py  functional_tests.py  model_info.py  prompts.py  resource_templates.py  resources.py  score_summary.py  server_info.py  short.py  test_step.py  tool_scorecards.py  tools.py
src/mcp_interviewer/statistics/: functional_test_step.py  tool.py
tests/: test_interviewer.py  test_parse_json_completion.py
tests/constraints/: test_tool_schema_flatness.py
(+30 files in other folders)
